acp: integer commands

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         <script src="f_js/util.js"></script>
         <script src="f_js/elem.js"></script>
         <script src="f_js/send.js"></script>
+        
         <script src="f_js/app.js"></script>
-        <script src="f_js/acp.js"></script>
+        <script src="f_js/acp/main.js"></script>
+        <script src="f_js/acp/command/main.js"></script>
 
         <script src="f_js/inc.js"></script>
         <script src="f_js/translater.js"></script>
